Enabled Syntaxe @ReadOnly annotation.